add auth meta code
Signed-off-by: y30033032 <yuanmeng36@huawei.com>

--- a/core/authentication/authentication.gni
+++ b/core/authentication/authentication.gni
@@ -18,7 +18,6 @@ if (dsoftbus_feature_auth_account == true) {
 }
 
 authentication_path = "$dsoftbus_root_path/core/authentication"
-native_source_path = rebase_path("$dsoftbus_root_path")
 if (dsoftbus_feature_lnn_net) {
   auth_server_src = [
     "$authentication_path/src/auth_common.c",
@@ -30,7 +29,7 @@ if (dsoftbus_feature_lnn_net) {
     "$authentication_path/src/auth_session_key.c",
     "$authentication_path/src/auth_session_message.c",
     "$authentication_path/src/auth_interface.c",
-    "$authentication_path/src/virtual/auth_meta_manager_virtual.c"
+    "$authentication_path/src/virtual/auth_meta_manager_virtual.c",
   ]
   if (dsoftbus_feature_ip_auth) {
     auth_server_src +=
