--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -173,6 +173,7 @@ if (defined(ohos_lite)) {
     sources = dsoftbus_server_common_src
     sources += [
       "$dsoftbus_root_path/sdk/frame/$os_type/src/if_softbus_client.cpp",
+      "$os_type/client_manager/src/permission_status_change_cb.cpp",
       "$os_type/client_manager/src/softbus_client_info_manager.cpp",
       "$os_type/init/src/if_softbus_server.cpp",
       "$os_type/init/src/softbus_server.cpp",
