--- a/dsoftbus.gni
+++ b/dsoftbus.gni
@@ -29,6 +29,19 @@ declare_args() {
       "//foundation/communication/dsoftbus/adapter/default_config"
 }
 
+declare_args() {
+  dsoftbus_get_devicename = true
+  softbus_communication_wifi_feature = true
+}
+
+if (defined(global_parts_info) && !defined(global_parts_info.ability_base)) {
+  dsoftbus_get_devicename = false
+}
+
+if (defined(global_parts_info) && !defined(global_parts_info.communication_wifi)) {
+  softbus_communication_wifi_feature = false
+}
+
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
