--- a/dsoftbus.gni
+++ b/dsoftbus.gni
@@ -34,12 +34,14 @@ declare_args() {
   softbus_communication_wifi_feature = true
 }
 
-if (defined(global_parts_info) && !defined(global_parts_info.ability_base)) {
-  dsoftbus_get_devicename = false
+if (defined(global_parts_info) &&
+    !defined(global_parts_info.communication_wifi)) {
+  softbus_communication_wifi_feature = false
 }
 
-if (defined(global_parts_info) && !defined(global_parts_info.communication_wifi)) {
-  softbus_communication_wifi_feature = false
+if (defined(global_parts_info) &&
+    !defined(global_parts_info.ability_ability_runtime)) {
+  dsoftbus_get_devicename = false
 }
 
 if (defined(ohos_lite)) {
