--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -11,7 +11,8 @@
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell"],
-            "permission" : ["ohos.permission.PERMISSION_USED_STATS"]
+            "permission" : ["ohos.permission.PERMISSION_USED_STATS", "ohos.permission.GET_SENSITIVE_PERMISSIONS"],
+            "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"]
         }
     ]
 }
