--- a/tests/core/BUILD.gn
+++ b/tests/core/BUILD.gn
@@ -15,7 +15,7 @@ import("//build/lite/config/component/lite_component.gni")
 
 lite_component("softbus_test_core_common") {
   features = [
-    "common/message_handler:softbus_test_message_handler",
+    "common/message_handler/unittest:softbus_test_message_handler",
 
     "authentication/auth_test:softbus_auth_test",
 
