--- a/tests/core/common/json_utils/BUILD.gn
+++ b/tests/core/common/json_utils/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -11,18 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-group("unittest") {
-  testonly = true
-  deps = [
-    "ble:softbus_conn_ble_test",
-    "br:softbus_conn_br_test",
-    "common/unittest:softbus_conn_common_test",
-    "manager:softbus_conn_manager_test",
-    "tcp:softbus_tcp_manager_test",
-  ]
-}
-
 group("fuzztest") {
   testonly = true
-  deps = [ "common/fuzztest/connectioncommon_fuzzer:ConnectionCommonFuzzTest" ]
+  deps = [ "fuzztest/jsonutils_fuzzer:JsonUtilsFuzzTest" ]
 }
