--- a/tests/sdk/discovery/fuzztest/discoveryservice_fuzzer/BUILD.gn
+++ b/tests/sdk/discovery/fuzztest/discoveryservice_fuzzer/BUILD.gn
@@ -18,9 +18,10 @@ import("//build/test.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 ##############################fuzztest##########################################
-ohos_fuzztest("PublishServiceFuzzTest") {
+ohos_fuzztest("DiscoveryServiceFuzzTest") {
   module_out_path = "dsoftbus/discovery"
-  fuzz_config_file = "//foundation/communication/dsoftbus/tests/sdk/discovery/fuzztest/publishservice_fuzzer"
+  fuzz_config_file =
+      "$dsoftbus_root_path/tests/sdk/discovery/fuzztest/discoveryservice_fuzzer"
   include_dirs = [
     "//foundation/communication/dsoftbus/adapter/common/include",
     "//foundation/communication/dsoftbus/core/common/inner_communication",
@@ -38,22 +39,10 @@ ohos_fuzztest("PublishServiceFuzzTest") {
     "-fno-omit-frame-pointer",
     "-fstack-protector-strong",
   ]
-  sources = [ "publishservice_fuzzer.cpp" ]
+  sources = [ "discoveryservice_fuzzer.cpp" ]
 
   deps = [
-    "//foundation/communication/dsoftbus/adapter:softbus_adapter",
-    "//foundation/communication/dsoftbus/sdk:softbus_client",
-  ]
-
-  external_deps = [ "c_utils:utils" ]
-}
-
-###############################################################################
-group("fuzztest") {
-  testonly = true
-  deps = [
-    # deps file
-    ":PublishServiceFuzzTest",
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/sdk:softbus_client",
   ]
 }
-###############################################################################
