--- a/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
+++ b/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
@@ -33,6 +33,7 @@ ohos_unittest("TransProxyChannelCoreTest") {
     "$dsoftbus_root_path/core/transmission/common/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/proxy/src",
     "$dsoftbus_root_path/core/transmission/interface",
     "$dsoftbus_root_path/core/transmission/session/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
@@ -41,8 +42,6 @@ ohos_unittest("TransProxyChannelCoreTest") {
     "//commonlibrary/c_utils/base/include",
     "unittest/common/",
 
-    "//commonlibrary/c_utils/base/include",
-    "unittest/common/",
     "$dsoftbus_root_path/core/authentication/include",
     "$dsoftbus_root_path/core/authentication/interface",
     "$dsoftbus_root_path/core/bus_center/interface",
@@ -51,6 +50,7 @@ ohos_unittest("TransProxyChannelCoreTest") {
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/sync_ledger/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
     "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/common/message_handler/include",
     "$dsoftbus_root_path/core/connection/interface",
