--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -21,6 +21,7 @@ trans_sdk_test_common_src = [
 
 trans_sdk_test_common_inc = [
   "$dsoftbus_root_path/core/common/include",
+  "$dsoftbus_root_path/sdk/transmission/session/include",
   "$dsoftbus_root_path/interfaces/inner_kits/transport",
   "$dsoftbus_root_path/interfaces/kits/transport",
   "$dsoftbus_root_path/tests/sdk/common/include",
