--- a/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
+++ b/tests/core/transmission/trans_channel/udp_negotiation/BUILD.gn
@@ -16,15 +16,13 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
 
-ohos_unittest("TransTcpDirectCoreTest") {
+ohos_unittest("TransUdpNegoTest") {
   module_out_path = module_output_path
-  sources = [ "unittest/trans_tcp_direct_test.cpp" ]
+  sources = [ "trans_udp_nego_test.cpp" ]
 
   include_dirs = [
     "$softbus_adapter_common/include",
     "$dsoftbus_root_path/core/common/include",
-    "$dsoftbus_root_path/core/discovery/interface",
-    "$dsoftbus_root_path/interfaces/kits/discovery",
 
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
@@ -35,10 +33,10 @@ ohos_unittest("TransTcpDirectCoreTest") {
     "$dsoftbus_root_path/core/transmission/session/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
     "$dsoftbus_root_path/core/transmission/pending_packet/include",
-    "$dsoftbus_root_path/core/connection/p2p/interface",
+    "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation/include",
+
     "//commonlibrary/c_utils/base/include",
     "unittest/common/",
-
     "$dsoftbus_root_path/core/authentication/include",
     "$dsoftbus_root_path/core/authentication/interface",
     "$dsoftbus_root_path/core/bus_center/interface",
@@ -47,24 +45,34 @@ ohos_unittest("TransTcpDirectCoreTest") {
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/sync_ledger/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+    "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/core/common/message_handler/include",
+    "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
+    "$dsoftbus_root_path/interfaces/kits/common",
     "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
-    "$dsoftbus_root_path/core/discovery/manager/include",
-    "$dsoftbus_root_path/core/discovery/coap/include",
     "$dsoftbus_root_path/third_party/dfinder/include",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
+    "$dsoftbus_root_path/interfaces/kits/common",
     "//base/security/device_auth/interfaces/innerkits",
     "//third_party/cJSON",
     "$dsoftbus_root_path/core/adapter/bus_center/include",
 
     "$dsoftbus_root_path/interfaces/kits/transport",
+    "$dsoftbus_root_path/core/common/include",
     "$dsoftbus_root_path/interfaces/kits",
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation/src",
     "$dsoftbus_root_path/core/bus_center/service/include",
+    "$dsoftbus_root_path/core/discovery/manager/include",
+    "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/core/discovery/manager/include",
+    "$dsoftbus_root_path/core/discovery/coap/include",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
+    "$dsoftbus_root_path/core/connection/p2p/interface",
     "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/common/include",
-    "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/src",
-    "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
   ]
 
   deps = [
@@ -88,5 +96,5 @@ ohos_unittest("TransTcpDirectCoreTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":TransTcpDirectCoreTest" ]
+  deps = [ ":TransUdpNegoTest" ]
 }
