--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -51,6 +51,7 @@ if (defined(ohos_lite)) {
     sources = [
       "dsoftbus_crypto_test.cpp",
       "dsoftbus_other_test.cpp",
+      "softbus_dfx_test.cpp",
       "softbus_socket_test.cpp",
       "softbus_thread_test.cpp",
     ]
