--- a/tests/core/connection/br/BUILD.gn
+++ b/tests/core/connection/br/BUILD.gn
@@ -15,21 +15,34 @@ import("//build/test.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
-
-ohos_unittest("softbus_conn_br_test") {
-  module_out_path = module_output_path
+config("softbus_connection_br_test_config") {
   include_dirs = [
     "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/core/adapter/br/include",
     "$softbus_adapter_common/include",
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/connection/manager",
     "$dsoftbus_root_path/core/connection/tcp/include",
+    "$dsoftbus_root_path/core/connection/br/include",
+    "$dsoftbus_root_path/core/connection/br/src",
+    "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
+    "$softbus_adapter_common/net/bluetooth/include",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/core/connection/ble/include",
+    "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/core/discovery/manager/include",
     "//third_party/googletest/googletest/include",
     "//third_party/googletest/googletest/src",
     "//third_party/bounds_checking_function/include",
   ]
+}
 
+ohos_unittest("softbus_conn_br_test") {
+  module_out_path = module_output_path
+  public_configs = [ ":softbus_connection_br_test_config" ]
   deps = [
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/frame:softbus_server",
@@ -43,4 +56,22 @@ ohos_unittest("softbus_conn_br_test") {
     "hiviewdfx_hilog_native:libhilog",
   ]
   sources = [ "connection_br_test.cpp" ]
+}
+
+ohos_unittest("softbus_conn_br_manager_test") {
+  module_out_path = module_output_path
+  public_configs = [ ":softbus_connection_br_test_config" ]
+  deps = [
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/googletest:gmock_main",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  external_deps = [
+    "c_utils:utils",
+    "hiviewdfx_hilog_native:libhilog",
+  ]
+  sources = [ "connection_br_manager_test.cpp" ]
 }
