--- a/tests/core/discovery/ble/dispatcher/BUILD.gn
+++ b/tests/core/discovery/ble/dispatcher/BUILD.gn
@@ -23,15 +23,18 @@ ohos_unittest("DiscoveryBleDispatcherTest") {
   sources = [ "disc_ble_dispatcher_test.cpp" ]
 
   include_dirs = [
-    "//foundation/communication/dsoftbus/core/common/include",
-    "//foundation/communication/dsoftbus/core/discovery/ble/dispatcher/include",
-    "//foundation/communication/dsoftbus/core/discovery/manager/include",
-    "//foundation/communication/dsoftbus/core/discovery/interface",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/adapter/common/include",
+    "$dsoftbus_root_path/core/discovery/ble/dispatcher/include",
+    "$dsoftbus_root_path/core/discovery/manager/include",
+    "$dsoftbus_root_path/core/discovery/interface",
   ]
 
   deps = [
-    "//foundation/communication/dsoftbus/components/nstackx/nstackx_ctrl:nstackx_ctrl",
-    "//foundation/communication/dsoftbus/core/frame:softbus_server",
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/components/nstackx/nstackx_ctrl:nstackx_ctrl",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/googletest:gtest_main",
   ]
 
