fixed 62823bd from https://gitee.com/he-yangbo/communication_dsoftbus_3/pulls/2678 test: add dsoftbus test
Signed-off-by: heyangbo <heyangbo1@huawei.com>

--- a/tests/core/common/utils/fuzztest/BUILD.gn
+++ b/tests/core/common/utils/fuzztest/BUILD.gn
@@ -14,7 +14,7 @@
 group("fuzztest") {
   testonly = true
   deps = [
-    "softbusadapterhisysevent_fuzzer:fuzztest",
-    "softbusdecryptdata_fuzzer:SoftBusDecryptDataTest",
+    "softbusutils_fuzzer:SoftBusUtilsFuzzTest",
+    "sqlite3utils_fuzzer:Sqlite3UntilsFuzzTest",
   ]
 }
