--- a/tests/core/connection/br/BUILD.gn
+++ b/tests/core/connection/br/BUILD.gn
@@ -44,6 +44,7 @@ ohos_unittest("softbus_conn_br_test") {
   module_out_path = module_output_path
   public_configs = [ ":softbus_connection_br_test_config" ]
   deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/bounds_checking_function:libsec_shared",
@@ -62,6 +63,7 @@ ohos_unittest("softbus_conn_br_manager_test") {
   module_out_path = module_output_path
   public_configs = [ ":softbus_connection_br_test_config" ]
   deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/core/frame:softbus_server",
     "//third_party/bounds_checking_function:libsec_shared",
