fix:Fixed the compilation issue of the fuzz use case of the dsoftbus transport module
Signed-off-by: dong-peng25 <dongpeng25@huawei.com>

--- a/tests/sdk/transmission/fuzztest/streamadaptor_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/streamadaptor_fuzzer/BUILD.gn
@@ -46,11 +46,20 @@ ohos_fuzztest("StreamAdaptorFuzzTest") {
 
 ###############################################################################
 group("fuzztest") {
-  testonly = true
-  deps = []
-  deps += [
-    # deps file
-    ":StreamAdaptorFuzzTest",
-  ]
+  if (dsoftbus_feature_trans_udp == true) {
+    if (dsoftbus_feature_trans_udp_stream == true) {
+      if (!defined(ohos_lite)) {
+        testonly = true
+        deps = []
+        deps += [
+          # deps file
+          ":StreamAdaptorFuzzTest",
+        ]
+      }
+    }
+  } else {
+    testonly = true
+    deps = []
+  }
 }
 ###############################################################################
