--- a/tests/sdk/transmission/fuzztest/rawstreamdata_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/rawstreamdata_fuzzer/BUILD.gn
@@ -43,11 +43,20 @@ ohos_fuzztest("RawStreamDataFuzzTest") {
 
 ###############################################################################
 group("fuzztest") {
-  testonly = true
-  deps = []
-  deps += [
-    # deps file
-    ":RawStreamDataFuzzTest",
-  ]
+  if (dsoftbus_feature_trans_udp == true) {
+    if (dsoftbus_feature_trans_udp_stream == true) {
+      if (!defined(ohos_lite)) {
+        testonly = true
+        deps = []
+        deps += [
+          # deps file
+          ":RawStreamDataFuzzTest",
+        ]
+      }
+    }
+  } else {
+    testonly = true
+    deps = []
+  }
 }
 ###############################################################################
