fix:monitor permission API test
Signed-off-by: xuhengxiang <xuhengxiang@huawei.com>

--- a/tests/core/common/utils/BUILD.gn
+++ b/tests/core/common/utils/BUILD.gn
@@ -80,6 +80,7 @@ if (defined(ohos_lite)) {
     deps = [
       ":SqliteTest",
       ":softbus_utils_test",
+      "permission_state_test:PermissionsStateTest",
     ]
   }
 }
