--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -90,6 +90,7 @@ if (defined(ohos_lite)) {
     testonly = true
     deps = [
       ":TransSdkTest",
+      "monitor_permission_test:MonitorPermission",
       "permission:DynamicPermissionTest",
     ]
   }
