fixed fcd56a9 from https://gitee.com/dong-peng25/communication_dsoftbus/pulls/2754 fix:Transport module fuzz use case supplement
Signed-off-by: dong-peng25 <dongpeng25@huawei.com>

--- a/tests/sdk/transmission/fuzztest/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/BUILD.gn
@@ -22,6 +22,7 @@ group("fuzztest") {
     "clienttransproxyfilemanager_fuzzer:fuzztest",
     "clienttransproxymanager_fuzzer:fuzztest",
     "clienttranssessionmanager_fuzzer:fuzztest",
+    "clienttranssessionservice_fuzzer:fuzztest",
     "clienttransstream_fuzzer:fuzztest",
     "clienttranstcpdirectlistener_fuzzer:fuzztest",
     "clienttransudpmanager_fuzzer:fuzztest",
