--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -20,6 +20,7 @@ ohos_unittest("LNNTest") {
   module_out_path = module_output_path
   sources = [
     "ipc/bus_center_client_proxy_standard_test.cpp",
+    "ipc/bus_center_client_proxy_test.cpp",
     "ipc/lnn_bus_center_ipc_test.cpp",
     "net_builder/lnn_connection_fsm_test.cpp",
     "net_builder/lnn_network_info_test.cpp",
@@ -30,6 +31,7 @@ ohos_unittest("LNNTest") {
     "unittest/ledger_lane_hub_test.cpp",
     "unittest/lnn_huks_test.cpp",
     "unittest/net_builder_test.cpp",
+    "unittest/net_ledger_test.cpp",
   ]
 
   include_dirs = [
@@ -39,6 +41,9 @@ ohos_unittest("LNNTest") {
     "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_builder/sync_info/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/src",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
     "$dsoftbus_root_path/core/bus_center/monitor/include",
