--- a/tests/sdk/bus_center/fuzztest/BUILD.gn
+++ b/tests/sdk/bus_center/fuzztest/BUILD.gn
@@ -20,15 +20,23 @@ group("fuzztest") {
     "getallnodedeviceinfo_fuzzer:GetAllNodeDeviceInfoFuzzTest",
     "getlocalnodedeviceinfo_fuzzer:GetLocalNodeDeviceInfoFuzzTest",
     "getnodekeyinfo_fuzzer:GetNodeKeyInfoFuzzTest",
+    "getnodekeyinfoinner_fuzzer:GetNodeKeyInfoInnerFuzzTest",
     "joinlnn_fuzzer:JoinLNNFuzzTest",
+    "joinmetanode_fuzzer:JoinMetaNodeFuzzTest",
+    "joinmetanodelnner_fuzzer:JoinMetaNodeInnerFuzzTest",
     "leavelnn_fuzzer:LeaveLNNFuzzTest",
+    "leavelnninner_fuzzer:LeaveLNNInnerFuzzTest",
     "publishlnn_fuzzer:PublishLNNFuzzTest",
     "refreshlnn_fuzzer:RefreshLNNFuzzTest",
     "regnodedevicestatecb_fuzzer:RegNodeDeviceStateCbFuzzTest",
+    "setnodedatachangeflag_fuzzer:SetNodeDataChangeFlagFuzzTest",
     "shiftlnngear_fuzzer:ShiftLnnGearFuzzTest",
     "starttimesync_fuzzer:StartTimeSyncFuzzTest",
+    "starttimesyncinner_fuzzer:StartTimeSyncInnerFuzzTest",
+    "starttimesyncinner_fuzzer:StartTimeSyncInnerFuzzTest",
     "stoppublishlnn_fuzzer:StopPublishLNNFuzzTest",
     "stoprefreshlnn_fuzzer:StopRefreshLNNFuzzTest",
     "stoptimesync_fuzzer:StopTimeSyncFuzzTest",
+    "stoptimesyncinner_fuzzer:StopTimeSyncInnerFuzzTest",
   ]
 }
