--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -54,6 +54,7 @@ ohos_unittest("LNNTest") {
     "$dsoftbus_root_path/core/bus_center/interface",
     "$dsoftbus_root_path/core/bus_center/utils/include",
     "$dsoftbus_root_path/core/bus_center/ipc/standard/include",
+    "$dsoftbus_root_path/core/bus_center/ipc/standard/src",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/time_sync/include",
     "$dsoftbus_root_path/core/bus_center/ipc/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
