--- a/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
+++ b/tests/core/transmission/trans_channel/tcp_direct/BUILD.gn
@@ -45,6 +45,7 @@ ohos_unittest("TransTcpDirectCoreTest") {
     "$dsoftbus_root_path/core/authentication/include",
     "$dsoftbus_root_path/core/authentication/interface",
     "$dsoftbus_root_path/core/bus_center/interface",
+    "$dsoftbus_root_path/core/bus_center/utils/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
