--- a/tests/sdk/transmission/fuzztest/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/BUILD.gn
@@ -52,5 +52,6 @@ group("fuzztest") {
     "streamcommondata_fuzzer:fuzztest",
     "streamdepacketizer_fuzzer:fuzztest",
     "streammsgmanager_fuzzer:fuzztest",
+    "transserverproxyextern_fuzzer:fuzztest",
   ]
 }
