fixed e3d8dda from https://gitee.com/stonesimilar/communication_dsoftbus_2/pulls/2792 add recv handshake safe sessionname limit on auth apptype Signed-off-by: samuel.shi <shixintao1@huawei.com>
Change-Id: I42b79d45abe9537f3fde39a2984762dd1e2a4ca5

--- a/tests/core/transmission/trans_channel/auth_channel/BUILD.gn
+++ b/tests/core/transmission/trans_channel/auth_channel/BUILD.gn
@@ -30,6 +30,7 @@ ohos_unittest("TransAuthChannelCoreTest") {
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/transmission/common/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/common/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/auth/src",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy/include",
