--- a/core/transmission/trans_channel/common/common.gni
+++ b/core/transmission/trans_channel/common/common.gni
@@ -15,7 +15,9 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 dsoftbus_trans_channel_common_path =
     "$dsoftbus_root_path/core/transmission/trans_channel/common"
-trans_channel_common_src =
-    [ "$dsoftbus_trans_channel_common_path/src/trans_lane_pending_ctl.c" ]
+trans_channel_common_src = [
+  "$dsoftbus_trans_channel_common_path/src/trans_lane_pending_ctl.c",
+  "$dsoftbus_trans_channel_common_path/src/trans_channel_limit.c",
+]
 trans_channel_common_inc = [ "$dsoftbus_trans_channel_common_path/include" ]
 trans_channel_common_deps = []
