--- a/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
+++ b/tests/core/transmission/trans_channel/proxy_channel/BUILD.gn
@@ -31,6 +31,7 @@ ohos_unittest("TransProxyChannelCoreTest") {
     "$dsoftbus_root_path/interfaces/kits/common",
     "$dsoftbus_root_path/core/connection/interface",
     "$dsoftbus_root_path/core/transmission/common/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/common/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy/src",
