fuzz覆盖率 Signed-off-by: wangyb0625 <wangyibo38@huawei.com>

--- a/tests/sdk/transmission/fuzztest/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/BUILD.gn
@@ -53,5 +53,6 @@ group("fuzztest") {
     "streamdepacketizer_fuzzer:fuzztest",
     "streammsgmanager_fuzzer:fuzztest",
     "transserverproxyextern_fuzzer:fuzztest",
+    "vtpstreamsocket_fuzzer:fuzztest",
   ]
 }
